--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,10 @@
     "react": "16.11.0",
     "react-dom": "16.11.0",
     "react-router-dom": "^5.1.2",
+    "react-redux": "^7.2.0",
     "react-scripts": "3.2.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "web3": "1.2.2"
   },
   "scripts": {
