--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "test": "test"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^2.5.0",
     "openzeppelin-solidity": "^2.5.0",
     "solc": "^0.6.0",
     "solc-js": "^1.0.1",
-    "truffle": "^5.1.17"
+    "truffle": "^5.1.10"
   },
   "devDependencies": {},
   "scripts": {
