--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^2.5.0",
+    "@truffle/hdwallet-provider": "^1.0.33",
     "openzeppelin-solidity": "^2.5.0",
     "solc": "^0.6.0",
     "solc-js": "^1.0.1",
-    "truffle": "^5.1.10"
+    "truffle": "^5.1.10",
+    "truffle-hdwallet-provider": "^1.0.17"
   },
   "devDependencies": {},
   "scripts": {
