--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@drizzle/react-plugin": "^1.5.1",
+    "@drizzle/store": "^1.5.1",
     "@reduxjs/toolkit": "^1.3.2",
     "prop-types": "^15.7.2",
     "react": "16.11.0",
