--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@drizzle/react-plugin": "^1.5.1",
     "@drizzle/store": "^1.5.1",
     "@reduxjs/toolkit": "^1.3.2",
+    "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
     "react": "16.11.0",
     "react-dom": "16.11.0",
