--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^2.5.0",
+    "@openzeppelin/test-environment": "^0.1.3",
     "@truffle/hdwallet-provider": "^1.0.33",
+    "chai": "^4.2.0",
+    "mocha": "^7.1.1",
     "openzeppelin-solidity": "^2.5.0",
     "react-datepicker": "^2.14.1",
     "redux-devtools-extension": "^2.13.8",
@@ -18,7 +21,7 @@
     "truffle-hdwallet-provider": "^1.0.17"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha --exit --recursive test"
   },
   "repository": {
     "type": "git",
