--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react-dom": "16.11.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
+    "react-datepicker": "^2.14.1",
     "react-scripts": "3.2.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
