--- a/client/package.json
+++ b/client/package.json
@@ -6,13 +6,14 @@
     "@drizzle/react-plugin": "^1.5.1",
     "@drizzle/store": "^1.5.1",
     "@reduxjs/toolkit": "^1.3.2",
+    "ethereum-ens": "^0.8.0",
     "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
     "react": "16.11.0",
+    "react-datepicker": "^2.14.1",
     "react-dom": "16.11.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
-    "react-datepicker": "^2.14.1",
     "react-scripts": "3.2.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
