--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@openzeppelin/test-environment": "^0.1.3",
     "@openzeppelin/test-helpers": "^0.5.5",
     "@truffle/hdwallet-provider": "^1.0.33",
+    "@walletconnect/web3-provider": "^1.0.0-beta.47",
     "chai": "^4.2.0",
     "eth-ens-namehash": "^2.0.8",
     "mocha": "^7.1.1",
@@ -19,7 +20,8 @@
     "solc": "^0.6.0",
     "solc-js": "^1.0.1",
     "truffle": "^5.1.10",
-    "truffle-hdwallet-provider": "^1.0.17"
+    "truffle-hdwallet-provider": "^1.0.17",
+    "web3modal": "^1.6.0"
   },
   "scripts": {
     "test": "mocha --exit --recursive test"
