--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "web3": "1.2.2"
+    "web3": "1.2.2",
+    "web3modal": "^1.6.3"
   },
   "scripts": {
     "start": "react-scripts start",
