--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.3.2",
+    "@walletconnect/web3-provider": "^1.0.0-beta.47",
     "ethereum-ens": "^0.8.0",
     "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
