--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@walletconnect/web3-provider": "^1.0.0-beta.47",
     "chai": "^4.2.0",
     "eth-ens-namehash": "^2.0.8",
+    "fortmatic": "^2.0.6",
     "mocha": "^7.1.1",
     "openzeppelin-solidity": "^2.5.0",
     "redux-devtools-extension": "^2.13.8",
