--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.3.2",
     "@walletconnect/web3-provider": "^1.0.0-beta.47",
+    "authereum": "^0.0.4-beta.155",
     "ethereum-ens": "^0.8.0",
+    "fortmatic": "^2.0.6",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "16.11.0",
